Закончил адаптивность под ПК и планшеты

--- a/index.html
+++ b/index.html
@@ -470,7 +470,10 @@
               получится, но это тот случай, когда важен сам процесс познания.
               Ведь часто путь — и есть результат.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
+            <p>
+              Место, чтобы остановиться, подумать и написать, что вы чувствуете
+              в этой точке пути.
+            </p>
           </di>
           <div class="card__buttons">
             <button class="card__icon-button">
@@ -517,8 +520,8 @@
       <!--Save карточка-->
       <button class="button__save">
         <svg
-          viewBox="0 0 24 24"
           class="floppy"
+          viewBox="0 0 39 39"
           xmlns="http://www.w3.org/2000/svg"
         >
           <use xlink:href="./svg/floppy.svg#floppy"></use>
