Сделал все правки после ревью

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Закрывающий тег</title>
     <link rel="icon" href="./images/favicon.png" />
     <link rel="icon" href="./svg/favicon.svg" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -21,9 +22,9 @@
       <section class="main-content">
         <!--Первая карточка-->
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             Фритрек и нулевой спринт: Подготовка к работе
-          </h3>
+          </h2>
           <div class="card__image">
             <img
               class="image hue-rotate"
@@ -32,16 +33,19 @@
             />
             <span class="lable">&lt;/HTML&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               Это было самое начало пути. На этом этапе важно было проникнуться
               основами и настроиться на учёбу. И, возможно, подумать, как новые
               знания могут повлиять на ваше будущее.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              У меня уже был некий бекграунд в айти, но с сайтами я ещё не
+              работал по этому было довольно страшно начинать.
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -76,7 +80,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -84,7 +88,7 @@
 
         <!--Вторая карточка-->
         <article class="card">
-          <h3 class="card__title">1 спринт: Я — чистый лист</h3>
+          <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image">
             <img
               class="image sepia"
@@ -93,7 +97,7 @@
             />
             <span class="lable">&lt;/HTML&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               На первых этапах мы работали со страхами и сомнениями, которые
               часто испытывают новички. Один из них — страх перед чистым листом.
@@ -101,10 +105,13 @@
               за этим ощущением скрываются более глубокие вопросы: с чего
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Я быстро проходил задания и довольно быстро у меня получалось все
+              делать не оставая от группы.
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -139,7 +146,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -147,7 +154,7 @@
 
         <!--Третья карточка-->
         <article class="card">
-          <h3 class="card__title">1 спринт: А если не получится?</h3>
+          <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image">
             <img
               class="image grayscale"
@@ -156,16 +163,19 @@
             />
             <span class="lable">&lt;CSS&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Все было прекрасно я быстро выполнял задания и мне казалось,
+              чтоэтот путь очень легки для меня, в чем я конечно ошибался...
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -200,7 +210,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -208,7 +218,7 @@
 
         <!--Четвертая карточка-->
         <article class="card">
-          <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
+          <h4 class="card__title">2 спринт: Погоня за идеалом</h4>
           <div class="card__image">
             <img
               class="image invert"
@@ -217,7 +227,7 @@
             />
             <span class="lable">&lt;desigions&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               На этом этапе вы уже достаточно разбирались в основах вёрстки,
               чтобы понять, как много ещё впереди. Вы могли попытаться погнаться
@@ -225,10 +235,14 @@
               подвержены перфекционизму и вместо того, чтобы сделать идеально,
               старались просто сделать.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Мне становилось сложнее и мложнее, я переживал, что не справлюсь,
+              старался делать как можно лучше, но уже начинал не поспивать, так
+              как сильно расслабился из-за первого спринта.
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -263,7 +277,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -271,7 +285,7 @@
 
         <!--Пятая карточка-->
         <article class="card">
-          <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
+          <h5 class="card__title">2 спринт: О тех, кто рядом</h5>
           <div class="card__image">
             <img
               class="image many-filters"
@@ -280,7 +294,7 @@
             />
             <span class="lable">care</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               Всё это время вы были не одиноки (хотя, возможно, иногда и
               чувствовали, что одни против целого мира). Вас окружали
@@ -289,10 +303,15 @@
               поддавался. Осваивать что-то новое легче, когда рядом есть
               единомышленники, не правда ли?
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Меня всегда поддерживал мой друг с которым я так е учесь и который
+              лучше меня разбирается во всем этом, он часто сидел и делал
+              задания со мной паралельно обсуждая какие-нибудь новости, так же
+              меня поддерживала и подбадривала моя любимая девушка!
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -327,7 +346,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -335,7 +354,7 @@
 
         <!--Шестая карточка-->
         <article class="card">
-          <h3 class="card__title">3 спринт: Обходные стратегии</h3>
+          <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image">
             <img
               class="image saturate"
@@ -344,16 +363,20 @@
             />
             <span class="lable">&lt;support&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               На этом курсе вы постоянно решали разные задачи. В какой-то момент
               вам могло показаться, что решения просто иссякли. Значит, пришло
               время посмотреть на задачу под другим углом.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Было тяжко, но я старался каждый день учится и посвящал все свои
+              вечера программированию, что б в итоге всё подробнее изучить и
+              стать лучшим веб разработчиком.
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -388,7 +411,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -396,7 +419,7 @@
 
         <!--Седьмая карточка-->
         <article class="card">
-          <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
+          <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image brightness">
             <img
               class="image"
@@ -405,7 +428,7 @@
             />
             <span class="lable">&lt;lifes-style: none;&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               Во время учёбы часто возникает чувство, когда не знаешь, за что
               хвататься. Вроде и проектную пора сдавать, и задачи хочется
@@ -413,10 +436,14 @@
               пожить. В такие моменты очень нужна концентрация. Вспомните,
               откуда вы её черпали.
             </p>
-            <p>Место для ваших воспоминаний о начале обучения.</p>
-          </di>
+            <p>
+              Я часто терялся, но в такие моменты мне помогали близкие,
+              разясняли что куда, я часто сам очень долго сидел и разбирался как
+              же сверстать то, а как же анимировать это и это.
+            </p>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -451,7 +478,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -459,7 +486,7 @@
 
         <!--Восьмая карточка-->
         <article class="card">
-          <h3 class="card__title">«Сейчас я здесь»</h3>
+          <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image">
             <img
               class="image contrast"
@@ -468,7 +495,7 @@
             />
             <span class="lable">&lt;experience&gt;</span>
           </div>
-          <di class="card__text">
+          <div class="card__text">
             <p>
               Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
               Во-первых, впереди ещё много материала про «красотищу». Во-вторых,
@@ -478,12 +505,14 @@
               Ведь часто путь — и есть результат.
             </p>
             <p>
-              Место, чтобы остановиться, подумать и написать, что вы чувствуете
-              в этой точке пути.
+              Конечно я всё ещё переживаю и боюсь, что что-то не получится, но я
+              уже чувствую себя куда увернее и знаю, что смогу с нуля сверстать
+              сайт, так как знаю почти весь HTML и основы CSS которые мне помогу
+              навести красотищу
             </p>
-          </di>
+          </div>
           <div class="card__buttons">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 width="43"
                 height="43"
@@ -518,7 +547,11 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button
+              type="button"
+              type="button"
+              class="card__like-button button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -528,7 +561,7 @@
       <!--Save карточка-->
       <button
         type="button"
-        class="button__save"
+        class="button__save button"
         onclick="window.insert.showModal()"
       >
         <svg
@@ -538,7 +571,7 @@
         >
           <use xlink:href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="button__save-text">Сохранить на память</span>
+        <span class="button__text">Сохранить на память</span>
       </button>
 
       <!--Окно диалога-->
@@ -557,10 +590,10 @@
           <div>
             <button
               type="button"
-              class="button__save"
+              class="button__save button"
               onclick="window.insert.close()"
             >
-              <span class="button__save-text">OK</span>
+              <span class="button__text">OK</span>
             </button>
           </div>
         </div>
