Исправил все ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -74,8 +73,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -120,7 +117,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -140,8 +136,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -184,7 +178,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -204,8 +197,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -251,7 +242,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -271,8 +261,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -320,7 +308,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -340,8 +327,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -385,7 +370,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -405,8 +389,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -452,7 +434,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -472,8 +453,6 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
@@ -521,7 +500,6 @@
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMidYMid meet"
-                transform="translate(2, 4)"
               >
                 <g class="heart">
                   <path
@@ -541,17 +519,11 @@
                 </g>
                 <path
                   class="sparks"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
                   d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 />
               </svg>
             </button>
-            <button
-              type="button"
-              type="button"
-              class="card__like-button button"
-            >
+            <button type="button" class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
